# bsqb

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
src/bsqb/: __init__.py  builder.py  exceptions.py  nodes.py  operators.py  validation.py
tests/: test_builder.py  test_nodes.py  test_validation.py
